--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,9 @@ body {
 
 @font-face {
     font-family: "enhypen";
-    src: url("assets/earthorbiterxtrabold.ttf") format("truetype");
+    src: url("../assets/earthorbiterxtrabold.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -28,7 +30,7 @@ h1 {
   font-size: 3vw;
   color: white;
   position: absolute;
-  font-family: "enhypen";
+  font-family: "enhypen",arial;
   top: 95%;
   left: 50%;
   transform: translate(-50%, -50%);
