--- a/public/style_page1.css
+++ b/public/style_page1.css
@@ -12,6 +12,8 @@ body {
 @font-face {
     font-family: "enhypen";
     src: url("../assets/earthorbiterxtrabold.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -28,7 +30,7 @@ h1 {
   font-size: 7vw;
   color: white;
   position: absolute;
-  font-family: "enhypen";
+  font-family: "enhypen",arial;
   left: 50%;
   transform: translate(-50%, -50%);
 }
