--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@ h1 {
   color: white;
   position: absolute;
   font-family: "enhypen",arial;
-  top: 95%;
+  top: 102%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -41,7 +41,7 @@ p{
     color: white;
     position: absolute;
     font-family: "Roboto Mono";
-    top: 115%;
+    top: 120%;
     left: 50%;
     transform: translate(-50%, -50%);
 padding-bottom: 40px;
@@ -49,9 +49,13 @@ padding-bottom: 40px;
 
 
 .center-image {
-  display: block;
-  margin: 5vh auto 0;
-  width: 95%;
+  position: absolute;
+    top: 0;          
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;    
 }
 
 .top-boxes {
@@ -89,3 +93,22 @@ a:hover {
   color: rgb(201, 88, 18);
 }
 
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  z-index: 10;
+  color: white;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.1); /* transparent at top */
+  transition: background-color 0.4s ease;
+}
+
+body {
+  margin: 0;
+  background: linear-gradient(black, white); /* to see the transition clearly */
+  height: 200vh;
+}
