--- a/public/style.css
+++ b/public/style.css
@@ -58,40 +58,6 @@ padding-bottom: 40px;
   z-index: -1;    
 }
 
-.top-boxes {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-}
-
-.box {
-  background-color: whitesmoke;
-  color: black;
-  font-family: "enhypen";
-  width: 300px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5em;
-  border-radius: 10px;
-  transition: 0.3s;
-}
-
-.box:hover {
-  background-color: #333;
-  transform: scale(1.05);
-}
-
-a {
-  text-decoration: none; 
-  color: rgb(201, 88, 18); 
-}
-
-a:hover {
-  color: rgb(201, 88, 18);
-}
 
 
 header {
@@ -99,16 +65,41 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px;
-  z-index: 10;
-  color: white;
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.1); /* transparent at top */
-  transition: background-color 0.4s ease;
+  background: rgba(255, 255, 255, 0.2);
+  z-index: 10;
 }
 
-body {
-  margin: 0;
-  background: linear-gradient(black, white); /* to see the transition clearly */
-  height: 200vh;
+.top-boxes {
+  display: flex;
+  gap: 20px;
+}
+
+.box {
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(20px);
+  color: black;
+  font-family: "enhypen";
+  width: 210px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.box:hover {
+  background-color: rgba(51, 51, 51, 0.6);
+  transform: scale(1.05);
+}
+
+a {
+  text-decoration: none;
+  color: rgb(201, 88, 18);
 }
