--- a/public/style_page1.css
+++ b/public/style_page1.css
@@ -31,8 +31,10 @@ h1 {
   color: white;
   position: absolute;
   font-family: "enhypen",arial;
+  top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 p{
@@ -46,13 +48,19 @@ p{
 padding-bottom: 40px;
 }  
 
-.i-land-image{
-    display: block;
-    margin: 5vh auto 0;
-    width: 95%;
-    padding-top: 10%
-
+.i-land-image {
+  position: absolute;
+  top: 50%;                 
+  left: 50%;               
+  transform: translate(-50%, -50%); 
+  width: 100vw;            
+  height: 100vh;             /* fills half the screen height */
+  object-fit: cover;        /* ensures image fills the area without stretching */
+  z-index: 0;               /* adjust layering if needed */
+  display: block;
+  margin-top: 40vw;
 }
+
   
   .image-container {
     position: relative;
@@ -87,22 +95,43 @@ padding-bottom: 40px;
     display: block;
   }
 
-  .spot1 { top: 86vh; left: 66vw; }
-  .spot2 { top: 85vh; left: 69vw; }
+  .spot1 { top: 98vh; left: 27vw; }
+  .spot2 { top: 98vh; left: 31vw; }
+  .spot4 { top: 60vh; left: 36vw; }
+  .spot5 { top: 56vh; left: 28vw; }
+  .spot6 { top: 59vh; left: 22.5vw; }
+  .spot7 { top: 59vh; left: 16vw; }
+  .spot8 { top: 62vh; left: 9vw; }
+  .spot9 { top: 60vh; left: 3vw; }
+  .spot10 { top: 72vh; left: -0.5vw; }
+  .spot11 { top: 73vh; left: -7vw; }
+  .spot12 { top: 59.5vh; left: -10vw; }
+  .spot13 { top: 59.5vh; left: -15vw; }
+  .spot14 { top: 62vh; left: -23vw; }
+  .spot15 { top: 57vh; left: -28.5vw; }
+  .spot16 { top: 57vh; left: -33.5vw; }
+  .spot30 { top: 0vh; left: -5.5vw; }
 
-   /* Optional: show where the hotspot is */
-  .hotspot::before {
+
+  .spot22 { top: 97vh; left: 3.5vw; }
+  .spot21 { top: 98vh; left: 0vw; }
+  .spot20 { top: 97.5vh; left: -9vw; }
+  .spot19 { top: 98vh; left: -27vw; }
+  .spot18 { top: 87vh; left: -40vw; }
+
+
+
+
+
+    .hotspot::before {
     content: "";
+    font-family: "Roboto Mono";
     position: absolute;
     inset: 0;
-    background: rgba(255,255,255,0.2);
     border-radius: 50%;
     transition: 0.3s;
+    z-index:100;
   }
-  .hotspot:hover::before {
-    background: rgba(255,255,255,0.5);
-  }
-
 
   .header-image
 {
@@ -126,4 +155,34 @@ header {
   backdrop-filter: blur(10px);
   background: rgba(11, 11, 11, 0.2);
   z-index: 10;
+}
+
+.top-boxes {
+  display: flex;
+  gap: 20px;
+}
+
+.box {
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(20px);
+  color: black;
+  font-family: "enhypen";
+  width: 210px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.box:hover {
+  background-color: rgba(51, 51, 51, 0.6);
+  transform: scale(1.05);
+}
+
+a {
+  text-decoration: none;
+  color: rgb(130, 58, 13);
 }
