--- a/public/style.css
+++ b/public/style.css
@@ -83,6 +83,34 @@ header {
   z-index: 10;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 2; /* pushes footer to the bottom */
+  padding-bottom: 40px;
+}
+
+.footer {
+  position: relative;
+  width: 100%;
+  margin-top: 160vh; /* adjust this to match your layout height */
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.886);
+  color: rgb(17, 15, 15);
+  font-family: "Roboto Mono";
+  z-index: 10;
+}
+
+
 .top-boxes {
   display: flex;
   gap: 20px;
