--- a/public/styler.css
+++ b/public/styler.css
@@ -261,7 +261,6 @@ h3 {
   left: 50%;
   transform: translate(-50%, -50%);
   white-space: nowrap;
-  z-index: 101;
 }
 
 .text2
@@ -332,31 +331,17 @@ h3 {
 
 /* footer */
 footer {
-  background-color: #e5e5e573;   
+  background-color: #f5f5f773;  /* light gray background */
   color: black;
   text-align: center;
   font-family: "enhypen", Arial, sans-serif;
-  padding: 40px 10px;
-  width: 100%;
-  box-sizing: border-box;
-  backdrop-filter: blur(8px);
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-  position: absolute;   
-  top: 610%;  
-  z-index: 10;
-}
-
-footer h2 {
-  font-family: "enhypen";
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: black;
+  padding: 30px 0 10px;
+  margin-top: 120%;
 }
 
 footer .social-icons {
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 25px;
   margin-bottom: 20px;
 }
@@ -372,12 +357,8 @@ footer .social-icons a img:hover {
 }
 
 footer p {
-  font-family: "Roboto Mono", monospace;
-  font-size: 0.9rem;
-  font-weight: bold;
-  margin: 0;
-  color: black;
+  font-family: "Roboto Mono", sans-serif;
+  font-size: 1.0rem;
+  font-weight: 500;
+  text-align: center;
 }
-
- 
-
